--- a/styles.css
+++ b/styles.css
@@ -1,100 +1,31 @@
 * {
   font-family: "M PLUS 1p", sans-serif;
   font-weight: 400;
+  box-sizing: border-box;
 }
 
-.container {
-  background-color: #f4f2f2;
-
-  /* position: absolute; */
-  height: 100vh;
-  width: 100vw;
+html,
+body {
+  height: 100%;
 }
 
-.nav-bar {
-  background-color: #82c671;
-  width: 100vw;
-  height: 5rem;
-  margin-left: calc(-50vw + 50%);
-}
-
-h2 {
-  position: relative;
-  bottom: 1.7rem;
-  left: 4rem;
-  background-color: #82c671;
-  color: white;
-  font-weight: 300;
-  font-size: 1.5rem;
-}
-
-b {
-  font-weight: 700;
-}
-
-.logo {
-  position: relative;
-  bottom: 5rem;
-  margin-bottom: -10rem;
-}
-
-.logo > img {
-  width: 1.5rem;
-  opacity: 0.2;
-}
-
-.burger {
-  position: relative;
-  top: 1rem;
-}
-
-.bread {
-  position: relative;
-  top: 2.8rem;
-  right: 2rem;
-}
-
-.rice {
-  position: relative;
-  top: 2.1rem;
-  right: 1.8rem;
-}
-
-.tomato {
-  position: relative;
-  bottom: 4.6rem;
-  left: 15.4rem;
-}
-
-.carrot {
-  position: relative;
-  bottom: 5.5rem;
-  left: 15.4rem;
-}
-
-.ham {
-  position: relative;
-  bottom: 3.8rem;
-  left: 13.7rem;
-}
-
-.menu-bar {
-  width: 27rem;
+body {
   display: flex;
-  justify-content: space-around;
-  position: relative;
-  bottom: 2rem;
-  left: 23.5rem;
-  background-color: #82c671;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgb(232, 232, 232);
 }
 
-.header-links {
-  color: white;
-  text-decoration: none;
-  font-weight: 400;
-  font-size: 0.9rem;
-  position: relative;
-  top: 0.5rem;
+.main-footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: calc(100vh - [height of your header]);
+}
+
+.page-wrapper {
+  flex: 1;
+  background-color: rgb(232, 232, 232);
 }
 
 a:hover {
@@ -110,15 +41,54 @@ button:active {
   bottom: -1px;
 }
 
-input {
+.logo-banner {
+  background-color: #82c671;
+  margin-left: calc(-50vw + 50%);
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
+.header-container {
+  max-width: 800px;
+  display: flex;
+  justify-content: center;
+}
+
+h2 {
+  color: white;
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+
+b {
+  font-weight: 700;
+}
+
+.menu-bar {
+  height: 4.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-items {
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 0.9rem;
+  position: relative;
+  top: 0.3rem;
+  margin-right: 16px;
+}
+
+#search {
   height: 2rem;
   border-radius: 0.25rem;
   border-style: none;
   font-size: 0.8rem;
-  padding-right: 1rem;
+  padding-right: 0.5rem;
   padding-left: 0.5rem;
-  position: relative;
-  left: 0.5rem;
 }
 
 .search-button {
@@ -134,11 +104,27 @@ input {
 h1 {
   font-family: "Oooh Baby", cursive;
   text-align: center;
-  padding: 0.5rem;
+}
+
+.img-container {
+  position: relative;
+  bottom: 1.5rem;
 }
 
 .recipe-img {
   width: 23rem;
+  height: 18rem;
+  margin-bottom: -2rem;
+  object-fit: contain;
+  display: block;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.meal-column-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 18rem;
 }
 
@@ -147,12 +133,9 @@ h4 {
 }
 
 .recipe-container {
-  position: relative;
-  top: 1.5rem;
-  left: 2rem;
   background-color: white;
   width: 20rem;
-  height: 16rem;
+  height: 17rem;
   border: 1px solid lightgrey;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.25);
 }
@@ -178,10 +161,23 @@ h4 {
   justify-content: space-around;
 }
 
+.ingredients-textarea,
+.about-container {
+  margin-top: 1rem;
+  padding-left: 0.8rem;
+  width: 90%;
+  height: 75%;
+  box-sizing: border-box;
+}
+
+.about-link {
+  margin-top: 1rem;
+}
+
 textarea {
-  padding: 1rem;
+  padding: 0.5rem;
   position: relative;
-  top: 1.5rem;
+  top: 0.4rem;
   left: 0.5rem;
   overflow: scroll;
   border: none;
@@ -194,6 +190,7 @@ textarea::-webkit-scrollbar {
 .favorite-button {
   display: flex;
   justify-content: center;
+  padding: 1rem;
 }
 
 .add-favorite {
@@ -205,4 +202,71 @@ textarea::-webkit-scrollbar {
   font-size: 0.8rem;
   padding: 0.3rem 0.7rem;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* footer */
+.footer-row {
+  background-color: white;
+}
+
+.footer {
+  width: 20rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 4rem;
+  margin: 0;
+}
+
+.footer-symbol {
+  width: 2rem;
+}
+
+.footer-links {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 0.8rem;
+  border: none;
+  background-color: white;
+}
+
+.about-container {
+  font-size: 0.8rem;
+  padding: 1rem 0.5rem;
+  text-align: center;
+}
+
+.calories {
+  font-weight: 600;
+}
+
+.nutrients-container {
+  margin-top: 0.8rem;
+  font-size: 1rem;
+}
+
+.nutrients {
+  font-weight: 600;
+}
+
+@media screen and (max-width: 767px) {
+  .header-container {
+    flex-direction: column;
+  }
+
+  .menu-bar {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .header-items {
+    margin-bottom: 1rem;
+  }
+
+  .footer {
+    flex-wrap: wrap;
+  }
 }
