--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ b {
 }
 
 #search {
+  color: black;
   height: 2rem;
   border-radius: 0.25rem;
   border-style: none;
@@ -129,6 +130,8 @@ h1 {
 
 h4 {
   text-align: center;
+  font-size: 0.95rem;
+  font-weight: 400;
 }
 
 .recipe-container {
@@ -217,7 +220,7 @@ textarea::-webkit-scrollbar {
 }
 
 .favorite-items-container .row {
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .search-page {
@@ -259,7 +262,12 @@ textarea::-webkit-scrollbar {
 }
 
 .search-results-container .row {
-  margin-top: 3rem;
+  margin-top: 4rem;
+}
+
+.search-favorite {
+  display: flex;
+  justify-content: center;
 }
 
 /* footer */
@@ -343,5 +351,9 @@ textarea::-webkit-scrollbar {
     border: none;
     border-radius: 0.3rem;
     margin-bottom: 0.7rem;
+  }
+
+  .search-container {
+    display: none;
   }
 }
