--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   background-color: rgb(232, 232, 232);
+  overflow: hidden;
 }
 
 .main-footer-wrapper {
@@ -23,8 +24,29 @@ body {
 }
 
 .page-wrapper {
-  flex: 1;
-  background-color: rgb(232, 232, 232);
+  height: 100vh;
+  overflow-y: scroll;
+}
+
+.page-wrapper::-webkit-scrollbar {
+  width: 0;
+}
+
+.page-wrapper::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.page-wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.page-wrapper::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.page-wrapper::-webkit-scrollbar-track:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 a:hover {
@@ -213,7 +235,8 @@ textarea::-webkit-scrollbar {
 .favorites-page {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  min-height: 100vh;
+  margin-bottom: 4rem;
 }
 
 .favorite-items-container {
@@ -231,7 +254,7 @@ textarea::-webkit-scrollbar {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  flex: 1;
+  margin-bottom: 4rem;
 }
 
 .search-container {
@@ -279,8 +302,8 @@ textarea::-webkit-scrollbar {
   display: flex;
   justify-content: center;
   position: relative;
-  bottom: 50rem;
-  right: 1rem;
+  top: 4rem;
+  right: 2rem;
 }
 
 .loading {
@@ -329,7 +352,6 @@ textarea::-webkit-scrollbar {
   color: rgb(236, 44, 44);
   font-weight: bold;
   position: relative;
-  bottom: 52rem;
   text-align: center;
 }
 
